🐛attempt to fix safari viewport issue

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -51,3 +51,12 @@
 		--ring: 222.2 84% 4.9%;
 	}
 }
+
+@supports (-webkit-touch-callout: none) {
+	.h-screen {
+		height: -webkit-fill-available;
+	}
+	.min-h-screen {
+		min-height: -webkit-fill-available;
+	}
+}
