Revert "min-h-screen to svh for mobile safari"
This reverts commit 222d4be31bd562f7d6f9fd29813978d1e9099e5b.

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -58,3 +58,10 @@
     --ring: 222.2 84% 4.9%;
   }
 }
+
+@supports (-webkit-touch-callout: none) {
+  .min-h-screen {
+    min-height: 100svh;
+    min-height: -webkit-fill-available;
+  }
+}
